# AlohaIO

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Sample/: AsyncRpcHandler.hpp  CMakeLists.txt  SayHelloServiceImpl.hpp  SayHelloServiceImplInstance.cpp  client.cpp  dylib.cpp  dylib_export.h  server.conf
Sample/Handler/: SayHello.cpp  SayHello.hpp
Sample/Proto/: hello.grpc.pb.cc  hello.grpc.pb.h  hello.pb.cc  hello.pb.h  protoc.sh
Util/: DaemonUtil.cpp  DaemonUtil.hpp  DylibManager.cpp  DylibManager.hpp  SetLogLevel.cpp  SetLogLevel.hpp  SetSpdlog.cpp  SetSpdlog.hpp
