CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(AlohaIO)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS "-Wall -fPIC")
IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
    SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-DDEBUG")
ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)

INCLUDE_DIRECTORIES(/usr/local/include)
LINK_LIBRARIES(dl pthread protobuf gpr grpc++ grpc++_reflection colib)

SET(APP_SOURCES "./main.cpp")
FILE(GLOB APP_SOURCES ${APP_SOURCES} "./Util/*.cpp")
FILE(GLOB APP_SOURCES ${APP_SOURCES} "./Common/*.cpp")

ADD_EXECUTABLE(alohad ${APP_SOURCES})
TARGET_LINK_LIBRARIES(alohad coredeps)
