CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(HelloSample)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS "-Wall")
IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
    SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-DDEBUG")
ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)

INCLUDE_DIRECTORIES(/usr/local/include)
INCLUDE_DIRECTORIES(.)
LINK_LIBRARIES(pthread protobuf gpr grpc++ grpc++_reflection)

SET(APP_SOURCES "./dylib.cpp")
FILE(GLOB APP_SOURCES ${APP_SOURCES} "./Proto/*.cc")
FILE(GLOB APP_SOURCES ${APP_SOURCES} "./Handler/*.cpp")
FILE(GLOB APP_SOURCES ${APP_SOURCES} "./SayHelloServiceImplInstance.cpp")

ADD_LIBRARY(sample SHARED ${APP_SOURCES})

ADD_EXECUTABLE(hello_client client.cpp Proto/hello.pb.cc Proto/hello.grpc.pb.cc)
TARGET_LINK_LIBRARIES(sample coredeps)
TARGET_LINK_LIBRARIES(hello_client coredeps)